# sane-epkowa

./: .gitignore  CMakeLists.txt  README.md
backend/: cfg-obj.c  get-infofile.c  hw-data.h  profile.c
data/: 04b8-epkowa.usbid  scsi  usb.in
data/device/: 414c2d4d583230.xml  414c2d4d583231.xml  414c2d4d58333030.xml  44532d473230303030.xml  45532d473131303030.xml  47542d58393830.xml  4c502d4d35333030.xml  4c502d4d38303430.xml  4c502d4d38313730.xml  4e58333030.xml  5049442030383543.xml  5049442030383544.xml  5049442030383545.xml  5049442030383546.xml  5049442030383630.xml  5049442030383631.xml  5049442030383632.xml  5049442030383633.xml  5049442030383634.xml  5049442030383635.xml  5049442030383639.xml  5049442030383641.xml  5049442030383730.xml  5049442030383731.xml  5049442030383732.xml  5049442030383733.xml  5049442030383738.xml  5049442030383739.xml  5049442030383742.xml  5049442030383743.xml  5049442030383744.xml  5049442030383745.xml  5049442030383746.xml  5049442030383830.xml  5049442030383831.xml  5049442030383833.xml  5049442030383834.xml  5049442030383835.xml  5049442030383846.xml  5049442030383930.xml  (+47 more)
sanei/src/: sanei_init_debug.c  sanei_usb.c
